# lostineconomics_quarto

./: .gitignore  CNAME  README.md  Untitled.ipynb  _quarto.yml  _quarto_internal_scss_error.scss  about.qmd  anari-custom.scss  hello.py  index.qmd  pixi.toml  project.qmd  pyproject.toml  research-items.yaml  research.qmd  styles.css  subscribe.html  theme.scss
.github/workflows/: deploy_yml
.pixi/: prefix
cvs/: long.qmd  long.xmd  short.qmd  short.xmd
docs/: CNAME  Untitled.html  about 2.html  about.html  fonts.html  index 2.html  index 2.xml  index-listing.json  index.feed-full-staged  index.html  index.xml  listings 2.json  listings.json  project.html  research.html  robots 2.txt  robots.txt  search 2.json  search 3.json  search.json  sitemap 2.xml  sitemap.xml  styles.css
docs/cvs/: long.html  short.html
docs/fonts/: dummy.html
docs/posts/: 2023-05-29-rye.html
docs/title_images/: profile-5.jfif  project-2.jfif  project-3.jfif
docs/tmp/: explorations_tmp.html
posts/: 2023-05-29-rye.qmd
posts/WSL-without-docker-desktop/: 2021-09-13-wsl_without_docker.xmd  index.qmd  subscribe.html
posts/computer-tool/: 2020-03-07-blogging-with-fastpages.qmd  2020-03-09-Streamlit-Heroku.qmd  2020-04-09-wsl2-walkthru.qmd  2020-09-26-windows-terminal 2.html  2020-09-26-windows-terminal.qmd  2020-10-24-classy-latex.qmd  2020-10-27-viva-binder.qmd  2021-02-02-all-vs-code.qmd  2021-11-19-python-in-browser.qmd  2021-11-19-python-in-github.qmd  2022-05-10-how-to-make-cv.qmd  2022-05-14-blogging-with-quarto.qmd  2022-05-25-pytorch.qmd  (+28 more)
tmp/: explorations_tmp.ipynb
(+364 files in other folders)
