[tool.poetry]
name = "lostineconomics-quarto"
version = "0.1.0"
description = ""
authors = ["Junsok Huhh <anarinsk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
koreanize-matplotlib = "^0.1.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
